tests/ui/generator/unsized-local-across-yield.stderr
warning: the feature `unsized_locals` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/unsized-local-across-yield.rs:3:12
   |
LL | #![feature(unsized_locals)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #48055 <https://github.com/rust-lang/rust/issues/48055> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-local-across-yield.rs:10:13
   |
LL |         let b: [u8] = *(Box::new([]) as Box<[u8]>);
   |             ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all values live across `yield` must have a statically known size

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
